# led_strip_hmi_demo_workspace

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh  test.sh  test_single_pkg.sh
.devcontainer/desktop/: Dockerfile  devcontainer.json  postCreateCommand.sh
src/: ros2.repos
src/dummy_detection_publisher/: package.xml  setup.cfg  setup.py
src/dummy_detection_publisher/cfg/: demo.yml  person_simple.yml  person_simple2.yml  person_simple3.yml  persons.yml
src/dummy_detection_publisher/dummy_detection_publisher/: dummy_publisher.py
src/dummy_detection_publisher/launch/: dummy_publisher.launch.py
src/dummy_detection_publisher/meshes/: lego_man.dae  lego_man2.dae
src/dummy_detection_publisher/rviz/: default.rviz
src/led_strip_hmi_demos/: CMakeLists.txt  package.xml
src/led_strip_hmi_demos/config/: a200.yaml  complex_strip.yaml  laserscan.yaml  robot.yaml
src/led_strip_hmi_demos/launch/: a200.launch.py  complex_strip.launch.py  laserscan.launch.py
src/led_strip_hmi_demos/rviz/: a200.rviz  default_config.rviz
