<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>led_strip_hmi_demos</name>
  <version>0.1.0</version>

  <description>
    Demo launch files for the ws_led_strip_hmi workspace, showcasing the projector and
    visualization packages with sample configurations (A200, Caripu, LaserScan).
  </description>
  <maintainer email="marco.wallner@ait.ac.at">Marco Wallner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system -->
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Node packages required at runtime -->
  <exec_depend>led_strip_hmi_projector</exec_depend>
  <exec_depend>led_strip_hmi_visualization</exec_depend>
  <exec_depend>led_strip_hmi_msgs</exec_depend>

  <!-- Linting and testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
